maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:5: error: not found: value random5
	var x:Int=random5()
                  ^