maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {

while(!estSurBiscuit()){
	var x:Int=random5()
x match {
	case 0 => if(!estFaceMur){avance()}
	case 1 => droite()
	case 2 => gauche()
	case 3=> droite();droite()
	case 4 => gauche();if(!estFaceMur){avance}
}
}
prendBiscuit()
}
